[package]
name = "currency-converter"
version = "0.1.0"
edition = "2021"
authors = ["Exceed"]

[dependencies]
anyhow = "1.0.81"
directories = "5.0.1"
reqwest = { version = "0.11.25", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
